--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -215,14 +215,14 @@ The major trade-off with Ceph is %...
 
 The LOCUS distributed file system was developed in the early 1980s. LOCUS is a
 system that stands out due to its' features. These features include automatic
-management of replicated data, atomic file updates and more.
+management of replicated data, atomic file updates and more. \cite{concepts}
 
 LOCUS uses filegroups to create containers of storage sites. These filegroups
 can exist of multiple physical containers. LOCUS keeps track of files using
 i-nodes, just as UNIX filesystems do. LOCUS keeps a list of file designators,
 these designators are a combination of logical filegroups and the i-nodes of
-files. By keeping these designators centralised, easy access to the file system
-is guaranteed.
+files. \cite{concepts} By keeping these designators centralised, easy access to
+the file system is guaranteed.
 
 Fault tolerance is handled within LOCUS by keeping a policy of consistency among
 copies of a file. The policy is to allow update only in a partition that has the
@@ -235,7 +235,7 @@ have a single synchronization site. This site keeps track of all files that are
 in the filegroup. Heavily accessed filegroups cannot keep up with the number of
 requests, if the norm gets bigger. If however the I/O operations are spread over
 the filegroups, the LOCUS file system can be fast, because locking of files is
-not required system-wide, only in the filegroup the file is in.
+not required system-wide, only in the filegroup the file is in. \cite{concepts}
 
 
 \section{Andrew}
