--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -14,6 +14,7 @@
 \usepackage{minted}
 \usepackage{caption}
 \usepackage{amssymb}
+\usepackage{natbib}
 
 \pagestyle{fancy}
 \lhead{\includegraphics[width=7cm]{logoUvA}}
@@ -152,7 +153,7 @@ In this section we take a more in depth look at what a distributed file system
 exactly is, and why it is useful. A distributed file system is a system of
 servers and clients (in some cases devices can be both server and client at the
 same time) where data is spread over multiple storage devices (servers) but can
-be accessed by clients as though it were on their own device. \cite{concepts}
+be accessed by clients as though it were on their own device. \citet{concepts}
 
 A distributed file system is particularly convenient in large corporations where
 employees each have their own account that they can use to log in to any
@@ -168,26 +169,26 @@ system in order for it to be effective. First of all a user must be able to
 access the files they are trying to access in a way that is (preferably) no
 different accessing files on a centralised file system. And a user must also be
 able to access their files located on the distributed file system from any
-machine within the system. \cite{concepts} Another very important requirement is
+machine within the system. \citet{concepts} Another very important requirement is
 of course the performance of the system. If a file system is too slow, it
 becomes impractical to use since every time a client requests access to a file
 they would have to wait for it. Another key concern is the system's fault
 tolerance. Being fault tolerant means that the system will not completely crash
 or shut down when a fault occurs, instead it should either manage the fault or
 continue functioning with reduced functionality until the fault is
-solved. \cite{concepts}
+solved. \citet{concepts}
 
 \section{LOCUS}
 
 The LOCUS distributed file system was developed in the early 1980s. LOCUS is a
 system that stands out due to it's features. These features include automatic
-management of replicated data, atomic file updates and more. \cite{concepts}
+management of replicated data, atomic file updates and more. \citet{concepts}
 
 LOCUS uses filegroups to create containers of storage sites. These filegroups
 can exist of multiple physical containers. LOCUS keeps track of files using
 i-nodes, just as UNIX filesystems do. LOCUS keeps a list of file designators,
 these designators are a combination of logical filegroups and the i-nodes of
-files. \cite{concepts} By keeping these designators centralised, easy access to
+files. \citet{concepts} By keeping these designators centralised, easy access to
 the file system is guaranteed.
 
 Fault tolerance is handled within LOCUS by keeping a policy of consistency among
@@ -197,7 +198,7 @@ after a commit has been done on the primary copy.
 
 The biggest trade-off within the LOCUS file system is that it does not perform
 well when scaled. The scalability of the system is limited because all
-filegroups have a single synchronization site. \cite{concepts} This site keeps
+filegroups have a single synchronization site. \citet{concepts} This site keeps
 track of all files that are in the filegroup. Heavily accessed filegroups cannot
 keep up with the number of requests, if the norm gets bigger. If however the I/O
 operations are spread over the filegroups, the LOCUS file system can be fast,
@@ -211,23 +212,23 @@ The distributed file system used by the Andrew distributed computing environment
 the LOCUS file system was developed. In creating Andrew the designers main goals
 were performance and scalability. This means that Andrew had to provide a
 relatively good performance and also make sure the performance does not suffer
-too much when scaling up the system.\cite{andrew}
+too much when scaling up the system.\citet{andrew}
 
 Andrew works by using dedicated servers and clients. The clients each have local
 storage and are also able to access the shared storage located on the servers.
 The Servers are collectively responsible for managing the shared
-storage. \cite{concepts} When a client wants to retrieve a file from the shared
+storage. \citet{concepts} When a client wants to retrieve a file from the shared
 storage it will send a request to a server. Servers continuously listen for
 client connections and as soon as a client wants to connect the server creates a
 new process to handle the communication with that client. The process is only
-terminated when the client disconnects. \cite{andrew} Servers contain both data
+terminated when the client disconnects. \citet{andrew} Servers contain both data
 and links to data that exists on other servers.
 
 In Andrew universality is achieved through caching. When a file is requested it
 is put into local storage before the user can manipulate the file. This means
 that the way a user interacts with file is much the same as on a centralised
 file system, since the file is actually copied to local memory. The only
-difference is the time it takes to load a not yet cached file. \cite{concepts}
+difference is the time it takes to load a not yet cached file. \citet{concepts}
 
 Caching also plays a great part in performance. Because files are cached
 locally, data transfers between clients and servers occur less frequently. Since
@@ -235,19 +236,19 @@ data transfers to servers are very slow and local storage accesses are
 relatively fast this significantly increases performance. In addition, the
 performance when scaling the system is also very good since the clients can
 execute programs that are stored locally without any server interaction, thus
-not overloading the server with requests. \cite{andrew}
+not overloading the server with requests. \citet{andrew}
 
 A major trade-off that was made in Andrew is the fact that they sacrifice fault
 tolerance for performance. Due to the way the caching works it is rather
 difficult to recover data. Data is only synchronised with the server on a file
-open or close. \cite{andrew} So in case of a crash, any unsynchronised data will
+open or close. \citet{andrew} So in case of a crash, any unsynchronised data will
 be lost.  Of course this increases performance because less communication is
 needed, but it does make the system less tolerant of faults.
 
 \section{Ceph}
 
 The Ceph distributed file system was initially developed late 2007 by Sage Weil
-during his doctoral dissertation. \cite{weil2006ceph} Ceph's main goals are to
+during his doctoral dissertation. \citet{weil2006ceph} Ceph's main goals are to
 be completely distributed without a single point of failure, scalable to the
 exabyte level and freely-available. The data is replicated, making it highly
 fault tolerant.
@@ -259,7 +260,7 @@ look-ups are unnecessary, because any user can simply calculate the name and the
 location of a set of objects forming a file.  Using this procedure, meta data
 operations like \textit{open}, or \textit{rename}, do not need access to the
 data on the servers, but can be handled by a dedicated meta-data server.
-\cite{weil2006ceph}
+\citet{weil2006ceph}
 
 Metadata operations can take up to half of the operations of the distributed
 file system. Therefor Ceph has an aggressive prefetching algorithm to have
@@ -271,7 +272,7 @@ directory locality in the general case.
 Ceph implements fault tolerance, by replicating all data it has. Data is
 replicated in terms of placement groups, each of which is mapped to an ordered
 list of $n$ object storage devices (for $n$-way replication).
-\cite{weil2006ceph} Disadvantage of this system is that writes are slow, due to
+\citet{weil2006ceph} Disadvantage of this system is that writes are slow, due to
 having to having to update all replicates in the system. However, this reliefs
 the head node of doing writes to all replicates.
 
